- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    4.6.3
 - 
    None
 
- 
        a87dbf0d08d58b829ca2fa036d589ad4fd48949f 4d0571667463997f5f1145408a2ba73ba293637a
 
Access to the Qt gradient cache is not protected by mutexes, causing race conditions in applications which draw gradients in multiple threads, resulting in crashes deep inside Qt's painting engine.
- relates to
 - 
                    
QTBUG-42029 Race condition on QGradientCache::getBuffer()
-         
 - Closed
 
 -