Fixed race condition in raster paint engine.

We need to protect the gradient cache accesses with a mutex.

Task-number: QTBUG-14614
Reviewed-by: Bradley T. Hughes